--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,9 @@ repo: status # The name of this repository
 
 sites:
   - name: Notary WS
-    url: wss://notary.pluto.xyz
+    url: notary.pluto.xyz
+    port: 443
+    check: 'tcp-ping'
   - name: Notary HTTP
     url: https://notary.pluto.xyz
   - name: Frame
